# metakitchen

./: .gitignore  AGENTS.md  PYPI_PACKAGING.md  README.md  metak.py  publish.py  pyproject.toml
metak-orchestrator/: AGENTS.md
metak-shared/: coding-standards.md  overview.md
metakitchen/: README.md  configuration.md  file-structure.md  manifests.json  tips.md  usage.md
