[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metakitchen"
version = "0.1.0"
description = "Scaffold and manage multi-repo AI agent workspaces"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Tiago Ribeiro", email = "metakitchen@tiagoribeiro.pt"}
]
maintainers = [
    {name = "Tiago Ribeiro", email = "metakitchen@tiagoribeiro.pt"}
]
keywords = ["ai", "agents", "scaffold", "multi-repo", "orchestration", "claude", "cursor", "copilot", "codex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "twine",
    "build",
]

[project.urls]
Homepage = "https://github.com/tiagrib/metakitchen"
Repository = "https://github.com/tiagrib/metakitchen.git"
Issues = "https://github.com/tiagrib/metakitchen/issues"
Documentation = "https://github.com/tiagrib/metakitchen#readme"

[project.scripts]
metak = "metak:main"

[tool.setuptools]
py-modules = ["metak"]
